Getlast and Getfirst removed